// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components:styled:MobilePreviousButton renders the MobilePreviousButton and CSS properties properly 1`] = `
.c0 {
  background-color: #ededed;
  border: none;
  border-radius: 5px 0 0 5px;
  color: #c0c0c0;
  height: 42px;
  outline: none;
  width: 48px;
}

<button
  className="c0"
>
  Click Me
</button>
`;

exports[`components:styled:MobilePreviousButton renders the MobilePreviousButton and CSS properties properly when enabled 1`] = `
.c0 {
  background-color: #ededed;
  border: none;
  border-radius: 5px 0 0 5px;
  color: #000;
  height: 42px;
  outline: none;
  width: 48px;
}

<button
  className="c0"
>
  Click Me!
</button>
`;
